--- a/Alpesh/ld.html
+++ b/Alpesh/ld.html
@@ -127,6 +127,13 @@
 	  </a>
 	</div>
 </div>
+<div class="responsive">
+	<div class="gallery">
+	  <a target="_blank" href="ld\2.png">
+		<img title="view" src="ld\2.png" alt="view" width="400" height="400">
+	  </a>
+	</div>
+</div>
 </p> 
 <div id="mySidenav" class="sidenav">
       			<a id="fb" href=" https://www.facebook.com/Future-Design-1103442153021229/"><i class="fa fa-facebook" aria-hidden="true"></i></a>
