--- a/Alpesh/tp.html
+++ b/Alpesh/tp.html
@@ -92,7 +92,20 @@
     		</a>
   		</div>
 	</div>
-	
+	<div class="responsive">
+  		<div class="gallery">
+    		<a target="_blank" href="tp\2.jpg">
+      		<img title="TURNKEY View" src="tp\2.jpg" alt="TURNKEY" width="400" height="400">
+    		</a>
+  		</div>
+	</div>
+	<div class="responsive">
+  		<div class="gallery">
+    		<a target="_blank" href="tp\3.jpg">
+      		<img title="TURNKEY View" src="tp\3.jpg" alt="TURNKEY" width="400" height="400">
+    		</a>
+  		</div>
+	</div>
 </p>
 <div id="mySidenav" class="sidenav">
       			<a id="fb" href=" https://www.facebook.com/Future-Design-1103442153021229/"><i class="fa fa-facebook" aria-hidden="true"></i></a>
