--- a/Alpesh/ad.html
+++ b/Alpesh/ad.html
@@ -4,18 +4,22 @@
 	<meta charset="utf-8">
 	<title>Future Design AD</title>
 	<link rel="icon" href="logo.jfif">
+	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	<link rel="stylesheet" type="text/css" href="html.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
 </head>
 <body>
-<p width="100%">
 	<header style="background-color:whitesmoke;">
-		<div>
-			<span id="logo"><img src="image11.png" height="70px" width="90px" style="padding-top: 5px;" title="Future Design"></span>
-			<span id="logo1" style="font-size:40px"><b style="color:#16572f">FUTURE  </b><b style="color:red">DESIGN</b></span>
-			<span style="font-size: 20px;white-space: nowrap">DESIGN YOUR DREAM</span>
-		</div>
+		<table>
+				<tr>
+					<td colspan="1">
+						<div id="logo"><img src="image11.png" height="100px" width="100px" title="Future Design"></div>
+					</td>
+					<td>
+						<div id="logo1" style="font-size:30px;"><h1 style="border-bottom: 3px solid #4d3b1d;padding-bottom: 15px;"><b style="color:#4d3b1d;">FUTURE </b><b style="color:red">DESIGN</b></h1><b style="font-size: 20px;white-space: nowrap;">DESIGN YOUR DREAM</b>
+					</td>
+		</table>
 	<div>
 		<div>
 			<div class="navbar">
@@ -38,7 +42,7 @@
 	</div>
 	</header>
 	<br>
-	<div class="number1" align="center" style="padding:20px;">
+	<div class="number1" align="center" >
 		<h3><u>ARCHITECTURAL DESIGNING SERVICE</u></h3>
 		<ul  align="left">
 			<li>The outer personality of our habitat reflects the taste of our inner soul. We deliver attractive and elegance exterior elevation designing that will make your home attractive within your budget.
@@ -120,7 +124,6 @@
     		</a>
   		</div>
 	</div>
-</p>
 <div id="mySidenav" class="sidenav">
       			<a id="fb" href=" https://www.facebook.com/Future-Design-1103442153021229/"><i class="fa fa-facebook" aria-hidden="true"></i></a>
       			<a id="istgm" href="https://www.instagram.com/alpesh_future_design/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
