--- a/Alpesh/enquiry.html
+++ b/Alpesh/enquiry.html
@@ -4,18 +4,22 @@
 	<meta charset="utf-8">
 	<title>Future Design Enquiry</title>
 	<link rel="icon" href="logo.jfif">
+	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	<link rel="stylesheet" type="text/css" href="html.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-<p width="100%">
 	<header style="background-color:whitesmoke;">
-		<div>
-			<span id="logo"><img src="image11.png" height="70px" width="90px" style="padding-top: 5px;" title="Future Design"></span>
-			<span id="logo1" style="font-size:40px"><b style="color:#16572f">FUTURE  </b><b style="color:red">DESIGN</b></span>
-			<span style="font-size: 20px;white-space: nowrap">DESIGN YOUR DREAM</span>
-		</div>
+		<table>
+				<tr>
+					<td colspan="1">
+						<div id="logo"><img src="image11.png" height="100px" width="100px" title="Future Design"></div>
+					</td>
+					<td>
+						<div id="logo1" style="font-size:30px;"><h1 style="border-bottom: 3px solid #4d3b1d;padding-bottom: 15px;"><b style="color:#4d3b1d;">FUTURE </b><b style="color:red">DESIGN</b></h1><b style="font-size: 20px;white-space: nowrap;">DESIGN YOUR DREAM</b>
+					</td>
+		</table>
 	<div>
 		<div>
 			<div class="navbar">
@@ -39,11 +43,36 @@
 	</header>
 	<div>
 		<div>
-			<div class="section-container" id="enquiry-section">
+		<table align="center">
+			<tr>
+				<td align="left">
+					<b style="font-size: xx-large;">Contact Us </b><br>
+					For getting extra information use this message window,E-mail,Contact.
+					<table align="center">
+						<tr>
+							<td><a href=""><i class="fa fa-map-marker" style="font-size:x-large"></i></a>
+							</td>
+							<td>228, Atlanta Shopping Complex, <br> Nr. Sudama Chowk, Mota Varachha, Surat - 394101
+							</td>
+						</tr>
+						<tr>
+							<td><a href="tel:Alpesh Prajapati - 9727727599" class="contact-action-container-text"><i class="fa fa-phone" aria-hidden="true" style="font-size: x-large;"></i></a>
+							</td>
+							<td>+91 9727727599<
+							</td>
+						</tr>
+						<tr>
+							<td><a href="https://mail.google.com/mail/u/0/#inbox?compose=new"><i class="fa fa-envelope" aria-hidden="true" style="font-size: x-large;"></i></a></td>
+							<td>future3ddesign@gmail.com
+							</td>
+						</tr>
+					</table>
+				</td>
+				<td>
+				<div class="section-container" id="enquiry-section">
 				<br>
          <form method="post" action="" class="enquiry-form">
-            <fieldset style="background-color: whitesmoke;color: black;font-weight: bolder;border:none;border-radius: 30px;font-size: normal;">
-            	<legend id="submit_b" style="font-size: normal;">Contact</legend>
+            <fieldset style="color: black;font-size: normal;border: none;">
             <div class="form-group">
             	<input class="form-control required" id="name" name="name" placeholder="Name" type="text" required="" size="50px">
             </div>
@@ -56,16 +85,18 @@
             <div class="form-group">
             	<input class="form-control required" id="telNo" name="telNo" type="tel"placeholder="Mobile Number (10 Digits)" required="" size="50px" pattern="[1-9]{1}[0-9]{9}">
             </div>
-            <div class="form-group">
-            	<input id="submit_b" type="submit" class="btn btn-default form-send" value="Submit">
+            <div class="form-group" align="left">
+            	<input type="submit" class="btn btn-default form-send" value="Send Message" style="background-color: #2196F3;color:white;">
             </div>
             </fieldset>
          </form>
          <div class="section-close"></div>
       	</div>
+      	</td>
+   	</tr>
+      </table>
 		</div>
 	</div>
-</p>
 <div id="mySidenav" class="sidenav">
       			<a id="fb" href=" https://www.facebook.com/Future-Design-1103442153021229/"><i class="fa fa-facebook" aria-hidden="true"></i></a>
       			<a id="istgm" href="https://www.instagram.com/alpesh_future_design/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
