--- a/Alpesh/profile.html
+++ b/Alpesh/profile.html
@@ -2,20 +2,24 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Future Design Profile</title>
+	<title>Future Design Projects</title>
 	<link rel="icon" href="logo.jfif">
+	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	<link rel="stylesheet" type="text/css" href="html.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	</head>
 <body>
-<p width="100%">
 	<header style="background-color:whitesmoke;">
-		<div>
-			<span id="logo"><img src="image11.png" height="70px" width="90px" style="padding-top: 5px;" title="Future Design"></span>
-			<span id="logo1" style="font-size:40px"><b style="color:#16572f">FUTURE  </b><b style="color:red">DESIGN</b></span>
-			<span style="font-size: 20px;white-space: nowrap">DESIGN YOUR DREAM</span>
-		</div>
+		<table>
+				<tr>
+					<td colspan="1">
+						<div id="logo"><img src="image11.png" height="100px" width="100px" title="Future Design"></div>
+					</td>
+					<td>
+						<div id="logo1" style="font-size:30px;"><h1 style="border-bottom: 3px solid #4d3b1d;padding-bottom: 15px;"><b style="color:#4d3b1d;">FUTURE </b><b style="color:red">DESIGN</b></h1><b style="font-size: 20px;white-space: nowrap;">DESIGN YOUR DREAM</b>
+					</td>
+		</table>
 	<div>
 		<div>
 			<div class="navbar">
@@ -64,7 +68,6 @@
 			Office Address :<br>	228, Atlanta Shopping Complex, <br> Nr. Sudama Chowk, Mota Varachha, Surat - 394101
 		</div>
 	</div>
-</p>
 <br>
 <br>
 <div id="mySidenav" class="sidenav">
