--- a/Alpesh/ld.html
+++ b/Alpesh/ld.html
@@ -4,18 +4,21 @@
 	<meta charset="utf-8">
 	<title>Future Design LD</title>
 	<link rel="icon" href="logo.jfif">
+	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	<link rel="stylesheet" type="text/css" href="html.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-<p width="100%">
 	<header style="background-color:whitesmoke;">
-		<div>
-			<span id="logo"><img src="image11.png" height="70px" width="90px" style="padding-top: 5px;" title="Future Design"></span>
-			<span id ="logo1"style="font-size:40px"><b style="color:#16572f">FUTURE  </b><b style="color:red">DESIGN</b></span>
-			<span style="font-size: 20px;white-space: nowrap">DESIGN YOUR DREAM</span>
-		</div>
+		<table>
+				<tr>
+					<td colspan="1">
+						<div id="logo"><img src="image11.png" height="100px" width="100px" title="Future Design"></div>
+					</td>
+					<td>
+						<div id="logo1" style="font-size:30px;"><h1 style="border-bottom: 3px solid #4d3b1d;padding-bottom: 15px;"><b style="color:#4d3b1d;">FUTURE </b><b style="color:red">DESIGN</b></h1><b style="font-size: 20px;white-space: nowrap;">DESIGN YOUR DREAM</b></td>
+		</table>
 	<div>
 		<div>
 			<div class="navbar">
@@ -38,7 +41,7 @@
 	</div>
 	</header>
 	<br>
-	<div class="number1" align="center" style="padding:20px;">
+	<div class="number1" align="center">
 		<h3><u>LANDSCAPE DESIGN SERVICES</u></h3>
 		<ul align="left">
 			<li>Landscaping is an art of decorating Surrounding space of your habitats and Common plot area of your residential or commercial project. 
