--- a/Alpesh/tp.html
+++ b/Alpesh/tp.html
@@ -2,20 +2,24 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Future Design TP</title>
+	<title>Future Design Projects</title>
 	<link rel="icon" href="logo.jfif">
+	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	<link rel="stylesheet" type="text/css" href="html.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-<p width="100%">
 	<header style="background-color:whitesmoke;">
-		<div>
-			<span id="logo"><img src="image11.png" height="70px" width="90px" style="padding-top: 5px;" title="Future Design"></span>
-			<span id="logo1" style="font-size:40px"><b style="color:#16572f">FUTURE  </b><b style="color:red">DESIGN</b></span>
-			<span style="font-size: 20px;white-space: nowrap">DESIGN YOUR DREAM</span>
-		</div>
+		<table>
+				<tr>
+					<td colspan="1">
+						<div id="logo"><img src="image11.png" height="100px" width="100px" title="Future Design"></div>
+					</td>
+					<td>
+						<div id="logo1" style="font-size:30px;"><h1 style="border-bottom: 3px solid #4d3b1d;padding-bottom: 15px;"><b style="color:#4d3b1d;">FUTURE </b><b style="color:red">DESIGN</b></h1><b style="font-size: 20px;white-space: nowrap;">DESIGN YOUR DREAM</b>
+					</td>
+		</table>
 	<div>
 		<div>
 			<div class="navbar">
@@ -38,7 +42,7 @@
 	</div>
 	</header>
 	<br>
-	<div class="number1" align="center" style="padding:20px;">
+	<div class="number1" align="center">
 		<h3><u>Turnkey Projects</u></h3>
 		<ul>
 			<li>Turnkey project concept come in life for providing a total solution from project starting to completion of project. In today fast moving life no body have a time to look after their project completion work. So we provide best and cost effective solution to client by giving turnkey project service.
@@ -106,7 +110,6 @@
     		</a>
   		</div>
 	</div>
-</p>
 <div id="mySidenav" class="sidenav">
       			<a id="fb" href=" https://www.facebook.com/Future-Design-1103442153021229/"><i class="fa fa-facebook" aria-hidden="true"></i></a>
       			<a id="istgm" href="https://www.instagram.com/alpesh_future_design/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
