--- a/Alpesh/enquiry.html
+++ b/Alpesh/enquiry.html
@@ -42,37 +42,34 @@
 	</div>
 	</header>
 	<div>
-		<div>
 		<table align="center">
+			<tr><td style="font-size: xx-large;">Contact Us</td>
+				<td style="font-size: xx-large;">Enquiry</td>
+				</tr>
 			<tr>
-				<td align="left">
-					<b style="font-size: xx-large;">Contact Us </b><br>
-					For getting extra information use this message window,E-mail,Contact.
-					<table align="center">
+				<td align="left">For getting extra information use this message window,E-mail,Contact.
+					<table>
 						<tr>
-							<td><a href=""><i class="fa fa-map-marker" style="font-size:x-large"></i></a>
+							<td><a href="https://g.page/future-design-surat?share"><i class="fa fa-map-marker" style="font-size:x-large;padding-right: 15px;"></i></a>
 							</td>
 							<td>228, Atlanta Shopping Complex, <br> Nr. Sudama Chowk, Mota Varachha, Surat - 394101
 							</td>
 						</tr>
 						<tr>
-							<td><a href="tel:Alpesh Prajapati - 9727727599" class="contact-action-container-text"><i class="fa fa-phone" aria-hidden="true" style="font-size: x-large;"></i></a>
+							<td><a href="tel:Alpesh Prajapati - 9727727599" class="contact-action-container-text"><i class="fa fa-phone" aria-hidden="true" style="font-size: x-large;padding-right: 15px;"></i></a>
 							</td>
 							<td>+91 9727727599<
 							</td>
 						</tr>
 						<tr>
-							<td><a href="https://mail.google.com/mail/u/0/#inbox?compose=new"><i class="fa fa-envelope" aria-hidden="true" style="font-size: x-large;"></i></a></td>
+							<td><a href="https://mail.google.com/mail/u/0/#inbox?compose=new"><i class="fa fa-envelope" aria-hidden="true" style="font-size: x-large;padding-right: 15px;"></i></a></td>
 							<td>future3ddesign@gmail.com
 							</td>
 						</tr>
 					</table>
 				</td>
 				<td>
-				<div class="section-container" id="enquiry-section">
-				<br>
          <form method="post" action="" class="enquiry-form">
-            <fieldset style="color: black;font-size: normal;border: none;">
             <div class="form-group">
             	<input class="form-control required" id="name" name="name" placeholder="Name" type="text" required="" size="50px">
             </div>
@@ -88,14 +85,10 @@
             <div class="form-group" align="left">
             	<input type="submit" class="btn btn-default form-send" value="Send Message" style="background-color: #2196F3;color:white;">
             </div>
-            </fieldset>
          </form>
-         <div class="section-close"></div>
-      	</div>
       	</td>
    	</tr>
       </table>
-		</div>
 	</div>
 <div id="mySidenav" class="sidenav">
       			<a id="fb" href=" https://www.facebook.com/Future-Design-1103442153021229/"><i class="fa fa-facebook" aria-hidden="true"></i></a>
