--- a/Alpesh/ld.html
+++ b/Alpesh/ld.html
@@ -17,7 +17,9 @@
 						<div id="logo"><img src="image11.png" height="100px" width="100px" title="Future Design"></div>
 					</td>
 					<td>
-						<div id="logo1" style="font-size:30px;"><h1 style="border-bottom: 3px solid #4d3b1d;padding-bottom: 15px;"><b style="color:#4d3b1d;">FUTURE </b><b style="color:red">DESIGN</b></h1><b style="font-size: 20px;white-space: nowrap;">DESIGN YOUR DREAM</b></td>
+						<div id="logo1" style="font-size:30px;"><b style="border-bottom: 3px solid #4d3b1d;"><b style="color:#4d3b1d;">FUTURE </b><b style="color:red">DESIGN</b></b><br><br><br><b style="font-size: 20px;white-space: nowrap;">DESIGN YOUR DREAM</b>
+						</div>
+					</td>
 		</table>
 	<div>
 		<div>
@@ -55,84 +57,84 @@
 	<br>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="ld\Picture3.png">
+    		<a href="ld\Picture3.png">
       		<img title="Garden View" src="ld\Picture3.png" alt="Garden View" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="ld\Picture4.png">
+    		<a href="ld\Picture4.png">
       		<img title="Farm View" src="ld\Picture4.png" alt="Farm View" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="ld\Picture5.png">
+    		<a href="ld\Picture5.png">
       		<img title="Map View" src="ld\Picture5.png" alt="Map View" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="ld\Picture6.png">
+    		<a href="ld\Picture6.png">
       		<img title="Plan View" src="ld\Picture6.png" alt="Plan View" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="ld\Picture1.png">
+    		<a href="ld\Picture1.png">
       		<img title="Garden View" src="ld\Picture1.png" alt="Garden View" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="ld\Picture2.png">
+    		<a href="ld\Picture2.png">
       		<img title="Patio" src="ld\Picture2.png" alt="Patio" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="ld\Picture.png">
+    		<a href="ld\Picture.png">
       		<img title="Gate View" src="ld\Picture.png" alt="Gate View" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="ld\Areoo city_Bird View.jpg">
+    		<a href="ld\Areoo city_Bird View.jpg">
       		<img title="Areo city_Bird View" src="ld\Areoo city_Bird View.jpg" alt="Areo city_Bird View" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
 		<div class="gallery">
-		  <a target="_blank" href="ld\Areoo city_Street view.jpg">
+		  <a href="ld\Areoo city_Street view.jpg">
 			<img title="Areo city_Street view" src="ld\Areoo city_Street view.jpg" alt="Areo city_Street view" width="400" height="400">
 		  </a>
 		</div>
   </div>
   <div class="responsive">
 	<div class="gallery">
-	  <a target="_blank" href="ld\Areoo city_Temple view.jpg">
+	  <a href="ld\Areoo city_Temple view.jpg">
 		<img title="Areo city_Temple view" src="ld\Areoo city_Temple view.jpg" alt="Areo city_Temple view" width="400" height="400">
 	  </a>
 	</div>
 </div>
 <div class="responsive">
 	<div class="gallery">
-	  <a target="_blank" href="ld\Cop 1_final.jpg">
+	  <a href="ld\Cop 1_final.jpg">
 		<img title="view" src="ld\Cop 1_final.jpg" alt="view" width="400" height="400">
 	  </a>
 	</div>
 </div>
 <div class="responsive">
 	<div class="gallery">
-	  <a target="_blank" href="ld\2.png">
+	  <a href="ld\2.png">
 		<img title="view" src="ld\2.png" alt="view" width="400" height="400">
 	  </a>
 	</div>
