--- a/Alpesh/profile.html
+++ b/Alpesh/profile.html
@@ -17,7 +17,8 @@
 						<div id="logo"><img src="image11.png" height="100px" width="100px" title="Future Design"></div>
 					</td>
 					<td>
-						<div id="logo1" style="font-size:30px;"><h1 style="border-bottom: 3px solid #4d3b1d;padding-bottom: 15px;"><b style="color:#4d3b1d;">FUTURE </b><b style="color:red">DESIGN</b></h1><b style="font-size: 20px;white-space: nowrap;">DESIGN YOUR DREAM</b>
+						<div id="logo1" style="font-size:30px;"><b style="border-bottom: 3px solid #4d3b1d;"><b style="color:#4d3b1d;">FUTURE </b><b style="color:red">DESIGN</b></b><br><br><br><b style="font-size: 20px;white-space: nowrap;">DESIGN YOUR DREAM</b>
+						</div>
 					</td>
 		</table>
 	<div>
@@ -51,13 +52,13 @@
 				<span class="round left">
     				<img src="Alpesh1.jpg" alt="Alpesh Prajapati">
     				<h2>
-    				<a target="_blank" href="tel:Alpesh Prajapati - 9727727599" class="contact-action-container-text"  style="color:black;background-color:white;border:none;border-radius: 30px;padding:0px 10px;">Alpesh Prajapati</a></h2>
-    				<a target="_blank" href="tel:Alpesh Prajapati - 9727727599" class="contact-action-container-text"  style="color:black;background-color:white;border:none;border-radius: 30px;padding:0px 10px;">+ 91 9727727599</a></h2>
+    				<a href="tel:Alpesh Prajapati - 9727727599" class="contact-action-container-text"  style="color:black;background-color:white;border:none;border-radius: 30px;padding:0px 10px;">Alpesh Prajapati</a></h2>
+    				<a href="tel:Alpesh Prajapati - 9727727599" class="contact-action-container-text"  style="color:black;background-color:white;border:none;border-radius: 30px;padding:0px 10px;">+ 91 9727727599</a></h2>
   				</span>
 				<!--<span class="round right">
   					<img src="logo.jfif" alt="Dharmesh Prajapati"  height="100px" width="250px">
     				<h2>
-    				<a target="_blank" href="tel:Dharmesh Prajapati - 8866318652" class="contact-action-container-text"  style="color:black;background-color:white;border:none;border-radius: 30px;padding:0px 10px;">Dharmesh Prajapati</a>
+    				<a href="tel:Dharmesh Prajapati - 8866318652" class="contact-action-container-text"  style="color:black;background-color:white;border:none;border-radius: 30px;padding:0px 10px;">Dharmesh Prajapati</a>
     				</h2>
     				<p class="number1" style="margin:0px 550px"> +91 8866318652</p>
   					</span>-->
