--- a/Alpesh/projectop.html
+++ b/Alpesh/projectop.html
@@ -17,8 +17,8 @@
 					<td colspan="1">
 						<div id="logo"><img src="image11.png" height="100px" width="100px" title="Future Design"></div>
 					</td>
-					<td>
-						<div id="logo1" style="font-size:30px;"><h1 style="border-bottom: 3px solid #4d3b1d;padding-bottom: 15px;"><b style="color:#4d3b1d;">FUTURE </b><b style="color:red">DESIGN</b></h1><b style="font-size: 20px;white-space: nowrap;">DESIGN YOUR DREAM</b>
+					<td><div id="logo1" style="font-size:30px;"><b style="border-bottom: 3px solid #4d3b1d;"><b style="color:#4d3b1d;">FUTURE </b><b style="color:red">DESIGN</b></b><br><br><br><b style="font-size: 20px;white-space: nowrap;">DESIGN YOUR DREAM</b>
+						</div>
 					</td>
 		</table>
 	<div>
@@ -45,35 +45,35 @@
 	<br>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="projects\3. Corner view.jpg">
+    		<a href="projects\3. Corner view.jpg">
       		<img title="Corner View" src="projects\3. Corner view.jpg" alt="Corner View" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="projects\4. Landscape view.jpg">
+    		<a href="projects\4. Landscape view.jpg">
       		<img title="Landscape View" src="projects\4. Landscape view.jpg" alt="Landscape View" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="projects\5. South side view.jpg">
+    		<a href="projects\5. South side view.jpg">
       		<img title="South Side View" src="projects\5. South side view.jpg" alt="South Side View" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="projects\1. Entry Gate front  view.jpg">
+    		<a href="projects\1. Entry Gate front  view.jpg">
       		<img title="Entrance View" src="projects\1. Entry Gate front  view.jpg" alt="Entrance View" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="projects\2. Front bird view.jpg">
+    		<a href="projects\2. Front bird view.jpg">
       		<img title="Bird View" src="projects\2. Front bird view.jpg" alt="Bird View" width="400" height="400">
     		</a>
   		</div>
