--- a/Alpesh/ad.html
+++ b/Alpesh/ad.html
@@ -17,7 +17,8 @@
 						<div id="logo"><img src="image11.png" height="100px" width="100px" title="Future Design"></div>
 					</td>
 					<td>
-						<div id="logo1" style="font-size:30px;"><h1 style="border-bottom: 3px solid #4d3b1d;padding-bottom: 15px;"><b style="color:#4d3b1d;">FUTURE </b><b style="color:red">DESIGN</b></h1><b style="font-size: 20px;white-space: nowrap;">DESIGN YOUR DREAM</b>
+						<div id="logo1" style="font-size:30px;"><b style="border-bottom: 3px solid #4d3b1d;"><b style="color:#4d3b1d;">FUTURE </b><b style="color:red">DESIGN</b></b><br><br><br><b style="font-size: 20px;white-space: nowrap;">DESIGN YOUR DREAM</b>
+						</div>
 					</td>
 		</table>
 	<div>
@@ -56,70 +57,70 @@
 	<br>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="ad\1. Left side view.jpg">
+    		<a href="ad\1. Left side view.jpg">
       		<img title="Left Side View" src="ad\1. Left side view.jpg" alt="Left Side View" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<!--<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="ad\3. Right view.jpg">
+    		<a href="ad\3. Right view.jpg">
       		<img title="Right view" src="ad\3. Right view.jpg" alt="Right view" width="400" height="400">
     		</a>
   		</div>
 	</div>-->
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="ad\cross vew.jpg">
+    		<a href="ad\cross vew.jpg">
       		<img title="Cross view" src="ad\cross vew.jpg" alt="Cross view" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="ad\Final FD 1.jpg">
+    		<a href="ad\Final FD 1.jpg">
       		<img title="Front view" src="ad\Final FD 1.jpg" alt="Front view" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="ad\Final Front.jpg">
+    		<a href="ad\Final Front.jpg">
       		<img title="Front view" src="ad\Final Front.jpg" alt="Front view" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<!--<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="ad\Option 1.2.jpg">
+    		<a href="ad\Option 1.2.jpg">
       		<img title="Front view" src="ad\Option 1.2.jpg" alt="Front view" width="400" height="400">
     		</a>
   		</div>
 	</div>-->
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="ad\Bungalow front view.jpg">
+    		<a href="ad\Bungalow front view.jpg">
       		<img title="Bungalow front view" src="ad\Bungalow front view.jpg" alt="Bungalow front view" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="ad\Front view.jpg">
+    		<a href="ad\Front view.jpg">
       		<img title="Front view" src="ad\Front view.jpg" alt="Front view" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="ad\Option 1 front FD.jpg">
+    		<a href="ad\Option 1 front FD.jpg">
       		<img title="Front view" src="ad\Option 1 front FD.jpg" alt="Front view" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="ad\Option 3.jpg">
+    		<a href="ad\Option 3.jpg">
       		<img title="Front view" src="ad\Option 3.jpg" alt="Front view" width="400" height="400">
     		</a>
   		</div>
