--- a/Alpesh/ed.html
+++ b/Alpesh/ed.html
@@ -17,7 +17,8 @@
 						<div id="logo"><img src="image11.png" height="100px" width="100px" title="Future Design"></div>
 					</td>
 					<td>
-						<div id="logo1" style="font-size:30px;"><h1 style="border-bottom: 3px solid #4d3b1d;padding-bottom: 15px;"><b style="color:#4d3b1d;">FUTURE </b><b style="color:red">DESIGN</b></h1><b style="font-size: 20px;white-space: nowrap;">DESIGN YOUR DREAM</b>
+						<div id="logo1" style="font-size:30px;"><b style="border-bottom: 3px solid #4d3b1d;"><b style="color:#4d3b1d;">FUTURE </b><b style="color:red">DESIGN</b></b><br><br><br><b style="font-size: 20px;white-space: nowrap;">DESIGN YOUR DREAM</b>
+						</div>
 					</td>
 		</table>
 	<div>
@@ -56,77 +57,77 @@
 	<br>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="ed\Picture.png">
+    		<a href="ed\Picture.png">
       		<img title="Gate View" src="ed\Picture.png" alt="Gate View" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="ed\Corner view final.jpg">
+    		<a href="ed\Corner view final.jpg">
       		<img title="corner View" src="ed\Corner view final.jpg" alt="Corner View" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="ed\Front 1.jpg">
+    		<a href="ed\Front 1.jpg">
       		<img title="Front View" src="ed\Front 1.jpg" alt="Front View" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="ed\Picture6.png">
+    		<a href="ed\Picture6.png">
       		<img title="Left Side View" src="ed\Picture6.png" alt="Left Side View" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="ed\International School Corner view.jpg">
+    		<a href="ed\International School Corner view.jpg">
       		<img title="School" src="ed\International School Corner view.jpg" alt="School" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="ed\Option 3.jpg">
+    		<a href="ed\Option 3.jpg">
       		<img title="Front View" src="ed\Option 3.jpg" alt="Front View" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="ed\Shopping Final view.jpg">
+    		<a href="ed\Shopping Final view.jpg">
       		<img title="Mall" src="ed\Shopping Final view.jpg" alt="Mall" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="ed\3. side view.jpg">
+    		<a href="ed\3. side view.jpg">
       		<img title="Side View" src="ed\3. side view.jpg" alt="Side View" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="ed\Tirtha Hazra Corner View.jpg">
+    		<a href="ed\Tirtha Hazra Corner View.jpg">
       		<img title="Tirtha Harza Corner View" src="ed\Tirtha Hazra Corner View.jpg" alt="Tirtha Harza Corner View" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="ed\1. Left side view.jpg">
+    		<a href="ed\1. Left side view.jpg">
       		<img title="Left Side View" src="ed\1. Left side view.jpg" alt="Left Side View" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="ed\Prajapati Brahma kumari view.jpg">
+    		<a href="ed\Prajapati Brahma kumari view.jpg">
       		<img title="Front View" src="ed\Prajapati Brahma kumari view.jpg" alt="Front View" width="400" height="400">
     		</a>
   		</div>
@@ -134,35 +135,35 @@
 	
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="ed\Picture5.png">
+    		<a href="ed\Picture5.png">
       		<img title="Apartment View" src="ed\Picture5.png" alt="Apartment View" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="ed\Biswanath corner view.jpg">
+    		<a href="ed\Biswanath corner view.jpg">
       		<img title="Corner View" src="ed\Biswanath corner view.jpg" alt="Corner View" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="ed\Picture4.png">
+    		<a href="ed\Picture4.png">
       		<img title="Front View" src="ed\Picture4.png" alt="Front View" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="ed\Picture1.png">
+    		<a href="ed\Picture1.png">
       		<img src="ed\Picture1.png" alt="Left Side View" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="ed\Picture3.png">
+    		<a href="ed\Picture3.png">
       		<img title="Left Side View" src="ed\Picture3.png" alt="Left Side View" width="400" height="400">
     		</a>
   		</div>
