--- a/Alpesh/enquiry.html
+++ b/Alpesh/enquiry.html
@@ -17,7 +17,8 @@
 						<div id="logo"><img src="image11.png" height="100px" width="100px" title="Future Design"></div>
 					</td>
 					<td>
-						<div id="logo1" style="font-size:30px;"><h1 style="border-bottom: 3px solid #4d3b1d;padding-bottom: 15px;"><b style="color:#4d3b1d;">FUTURE </b><b style="color:red">DESIGN</b></h1><b style="font-size: 20px;white-space: nowrap;">DESIGN YOUR DREAM</b>
+						<div id="logo1" style="font-size:30px;"><b style="border-bottom: 3px solid #4d3b1d;"><b style="color:#4d3b1d;">FUTURE </b><b style="color:red">DESIGN</b></b><br><br><br><b style="font-size: 20px;white-space: nowrap;">DESIGN YOUR DREAM</b>
+						</div>
 					</td>
 		</table>
 	<div>
@@ -42,12 +43,12 @@
 	</div>
 	</header>
 	<div>
-		<table align="center">
-			<tr><td style="font-size: xx-large;">Contact Us</td>
-				<td style="font-size: xx-large;">Enquiry</td>
+		<table align="center" style="margin-top:35px">
+			<tr><td style="font-size: x-large;font-weight:bolder;">Contact Us</td>
+				<td style="font-size: x-large;font-weight:bolder;">Enquiry</td>
 				</tr>
 			<tr>
-				<td align="left">For getting extra information use this message window,E-mail,Contact.
+				<td align="left" style="padding-right: 25px;">For getting extra information use this message window,E-mail,Contact.
 					<table>
 						<tr>
 							<td><a href="https://g.page/future-design-surat?share"><i class="fa fa-map-marker" style="font-size:x-large;padding-right: 15px;"></i></a>
@@ -69,7 +70,7 @@
 					</table>
 				</td>
 				<td>
-         <form method="post" action="" class="enquiry-form">
+         <form method="post" action="" class="enquiry-form" style="margin-top: 35px;">
             <div class="form-group">
             	<input class="form-control required" id="name" name="name" placeholder="Name" type="text" required="" size="50px">
             </div>
