--- a/Alpesh/id.html
+++ b/Alpesh/id.html
@@ -17,7 +17,8 @@
 						<div id="logo"><img src="image11.png" height="100px" width="100px" title="Future Design"></div>
 					</td>
 					<td>
-						<div id="logo1" style="font-size:30px;"><h1 style="border-bottom: 3px solid #4d3b1d;padding-bottom: 15px;"><b style="color:#4d3b1d;">FUTURE </b><b style="color:red">DESIGN</b></h1><b style="font-size: 20px;white-space: nowrap;">DESIGN YOUR DREAM</b>
+					<div id="logo1" style="font-size:30px;"><b style="border-bottom: 3px solid #4d3b1d;"><b style="color:#4d3b1d;">FUTURE </b><b style="color:red">DESIGN</b></b><br><br><br><b style="font-size: 20px;white-space: nowrap;">DESIGN YOUR DREAM</b>
+						</div>	
 					</td>
 		</table>
 	<div>
@@ -59,98 +60,98 @@
 
 	<!--<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="id\1. Bed view.jpg">
+    		<a href="id\1. Bed view.jpg">
       		<img title="Bed view" src="id\1. Bed view.jpg" alt="Bed view" width="400" height="400">
     		</a>
   		</div>
 	</div>-->
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="id\18.jpg">
+    		<a href="id\18.jpg">
       		<img title="Side View" src="id\18.jpg" alt="Side View" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="id\Bed biew.jpg">
+    		<a href="id\Bed biew.jpg">
       		<img title="Bed View" src="id\Bed biew.jpg" alt="Bed View" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="id\bedroom 1.jpg">
+    		<a href="id\bedroom 1.jpg">
       		<img title="Bed View" src="id\bedroom 1.jpg" alt="Bed View" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="id\Bed room 2.jpg">
+    		<a href="id\Bed room 2.jpg">
       		<img title="bedroom View" src="id\Bed room 2.jpg" alt="bedroom View" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="id\Bed view .jpg">
+    		<a href="id\Bed view .jpg">
       		<img title="Bed View" src="id\Bed view .jpg" alt="Bed View" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="id\bathroom 1.jpg">
+    		<a href="id\bathroom 1.jpg">
       		<img title="BathRoom" src="id\bathroom 1.jpg" alt="BathRoom" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="id\bathroom 2.jpg">
+    		<a href="id\bathroom 2.jpg">
       		<img title="BathRoom" src="id\bathroom 2.jpg" alt="BathRoom" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="id\1.jpg">
+    		<a href="id\1.jpg">
       		<img title="Office" src="id\1.jpg" alt="Office">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="id\Director Office view 1.jpg">
+    		<a href="id\Director Office view 1.jpg">
       		<img title="Director Office" src="id\Director Office view 1.jpg" alt="Director Office">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="id\Bed ceiling option 2 Black SB.jpg">
+    		<a href="id\Bed ceiling option 2 Black SB.jpg">
       		<img title="Bed-room-Ceiling" src="id\Bed ceiling option 2 Black SB.jpg" alt="Bed-room-Ceiling" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="id\Master Office view 1.jpg">
+    		<a href="id\Master Office view 1.jpg">
       		<img title="Master Office" src="id\Master Office view 1.jpg" alt="Master Office" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="id\Theatre uper bathroom 2.jpg">
+    		<a href="id\Theatre uper bathroom 2.jpg">
       		<img title="Theatre BathRoom" src="id\Theatre uper bathroom 2.jpg" alt="Theatre BathRoom" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<!--<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="id\2. Study table view.jpg">
+    		<a href="id\2. Study table view.jpg">
       		<img title="Study Table Room" src="id\2. Study table view.jpg" alt="Study Table Room" width="400" height="400">
     		</a>
   		</div>
