--- a/Alpesh/index.html
+++ b/Alpesh/index.html
@@ -3,12 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<title>Future Design HOME</title>
-	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	<link rel="icon" href="logo.jfif">
+	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">	
 	<link rel="stylesheet" type="text/css" href="html.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
-	
+	<link rel="javascript" href="">
 </head>
 <body>
 	<header style="background-color:whitesmoke;">
@@ -18,7 +17,8 @@
 						<div id="logo"><img src="image11.png" height="100px" width="100px" title="Future Design"></div>
 					</td>
 					<td>
-						<div id="logo1" style="font-size:30px;"><h1 style="border-bottom: 3px solid #4d3b1d;padding-bottom: 15px;"><b style="color:#4d3b1d;">FUTURE </b><b style="color:red">DESIGN</b></h1><b style="font-size: 20px;white-space: nowrap;">DESIGN YOUR DREAM</b>
+						<div id="logo1" style="font-size:30px;"><b style="border-bottom: 3px solid #4d3b1d;"><b style="color:#4d3b1d;">FUTURE </b><b style="color:red">DESIGN</b></b><br><br><br><b style="font-size: 20px;white-space: nowrap;">DESIGN YOUR DREAM</b>
+						</div>
 					</td>
 		</table>
 	<div>
@@ -43,17 +43,16 @@
 	</div>
 	</header>
 	<div  class="w3-content w3-section" style="margin-top: 5px;max-width:600px;">
-    	<a target="_blank" href="4.Tv Unit view .jpg">
+    	<a href="4.Tv Unit view .jpg">
   			<img class="mySlides w3-animate-fading" title="Tv Unit view" src="4.Tv Unit view .jpg" alt="Tv Unit view" style="width:100%;border: none;border-radius:30px;">
     	</a>
-    	<a target="_blank" href="id\1. Bed view.jpg">
+    	<a href="id\1. Bed view.jpg">
     		<img class="mySlides w3-animate-fading" title="Bed view" src="id\1. Bed view.jpg" alt="Bed view" style="width:100%;border: none;border-radius:30px;">
     	</a>
 	</div>
 	<script>
 var myIndex = 0;
 carousel();
-
 function carousel() {
   var i;
   var x = document.getElementsByClassName("mySlides");
