--- a/Alpesh/tp.html
+++ b/Alpesh/tp.html
@@ -17,7 +17,8 @@
 						<div id="logo"><img src="image11.png" height="100px" width="100px" title="Future Design"></div>
 					</td>
 					<td>
-						<div id="logo1" style="font-size:30px;"><h1 style="border-bottom: 3px solid #4d3b1d;padding-bottom: 15px;"><b style="color:#4d3b1d;">FUTURE </b><b style="color:red">DESIGN</b></h1><b style="font-size: 20px;white-space: nowrap;">DESIGN YOUR DREAM</b>
+						<div id="logo1" style="font-size:30px;"><b style="border-bottom: 3px solid #4d3b1d;"><b style="color:#4d3b1d;">FUTURE </b><b style="color:red">DESIGN</b></b><br><br><br><b style="font-size: 20px;white-space: nowrap;">DESIGN YOUR DREAM</b>
+						</div>
 					</td>
 		</table>
 	<div>
@@ -56,56 +57,56 @@
 	<br>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="tp\1. Left side view.jpg">
+    		<a href="tp\1. Left side view.jpg">
       		<img title="Left Side View" src="tp\1. Left side view.jpg" alt="Left Side View" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="tp\cross vew.jpg">
+    		<a href="tp\cross vew.jpg">
       		<img title="Cross View" src="tp\cross vew.jpg" alt="Cross View" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="tp\Front view.jpg">
+    		<a href="tp\Front view.jpg">
       		<img title="Front View" src="tp\Front view.jpg" alt="Front View" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="tp\TURNKEY-PROJECTS.jpg">
+    		<a href="tp\TURNKEY-PROJECTS.jpg">
       		<img title="TURNKEY-PROJECTS" src="tp\TURNKEY-PROJECTS.jpg" alt="TURNKEY-PROJECTS" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="tp\TURNKEY-PROJECTS6.jpg">
+    		<a href="tp\TURNKEY-PROJECTS6.jpg">
       		<img title="TURNKEY-PROJECTS" src="tp\TURNKEY-PROJECTS6.jpg" alt="TURNKEY-PROJECTS" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="tp\1-turnkey-projects-min.jpg">
+    		<a href="tp\1-turnkey-projects-min.jpg">
       		<img title="TURNKEY-PROJECTS View" src="tp\1-turnkey-projects-min.jpg" alt="TURNKEY-PROJECTS" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="tp\2.jpg">
+    		<a href="tp\2.jpg">
       		<img title="TURNKEY View" src="tp\2.jpg" alt="TURNKEY" width="400" height="400">
     		</a>
   		</div>
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-    		<a target="_blank" href="tp\3.jpg">
+    		<a href="tp\3.jpg">
       		<img title="TURNKEY View" src="tp\3.jpg" alt="TURNKEY" width="400" height="400">
     		</a>
   		</div>
