--- a/Alpesh/index.html
+++ b/Alpesh/index.html
@@ -10,7 +10,7 @@
 	<link rel="javascript" href="">
 </head>
 <body>
-	<header style="background-color:whitesmoke;">
+	<header style="background-color:rgb(245, 245, 245);">
 		<table>
 				<tr>
 					<td colspan="1">
